--- a/order/templates/cart.html
+++ b/order/templates/cart.html
@@ -91,9 +91,9 @@
 																			<a href="single-product.html"><img src="{{ item.product.image.url }}" alt="" /></a>
 																		</div>
 																		<div class="product-info">
-																			<h4 class="post-title"><a class="text-light-black" href="#">dummy product name</a></h4>
-																			<p class="mb-0">Color :  Black</p>
-																			<p class="mb-0">Size :     SL</p>
+																			<h4 class="post-title"><a class="text-light-black" href="#">{{ item.product.title }}</a></h4>
+																			<p class="mb-0">Color :  {{ item.porduct.color.name }}</p>
+																			<p class="mb-0">Size :     {{ item.size }}</p>
 																		</div>
 																	</div>
 																	<!-- Single-product end -->												
