--- a/home/templates/search_product.html
+++ b/home/templates/search_product.html
@@ -44,24 +44,51 @@
 												</div>
 												<div id="cat-treeview"  class="widget-info product-cat boxscrol2">
 													<ul>
-														{% for data in header_data %}
-														{% if data.category.id == 1 %}
-														<li><span>{{data.category.name}}</span>
+														<li><span>Chair</span>
 															<ul>
-																<li><a href="/shop/products/?categories={{ data.id }}">{{data.name}}</a></li>
+																<li><a href="#">T-Shirts</a></li>
+																<li><a href="#">Striped Shirts</a></li>
+																<li><a href="#">Half Shirts</a></li>
+																<li><a href="#">Formal Shirts</a></li>
+																<li><a href="#">Bilazers</a></li>
 															</ul>
-														</li>    
-														{% endif %}  
-														{% endfor %}  
-														{% for data in header_data %}
-														{% if data.category.id > 1 %}
-														<li class="open"><span>{{data.category.name}}</span>
+														</li>          
+														<li class="open"><span>Furniture</span>
 															<ul>
-																<li><a href="/shop/products/?categories={{ data.id }}">{{data.name}}</a></li>
+																<li><a href="#">Men Bag</a></li>
+																<li><a href="#">Shoes</a></li>
+																<li><a href="#">Watch</a></li>
+																<li><a href="#">T-shirt</a></li>
+																<li><a href="#">Shirt</a></li>
 															</ul>
-														</li>   
-														{% endif %} 
-														{% endfor %}        
+														</li>          
+														<li><span>Accessories</span>
+															<ul>
+																<li><a href="#">T-Shirts</a></li>
+																<li><a href="#">Striped Shirts</a></li>
+																<li><a href="#">Half Shirts</a></li>
+																<li><a href="#">Formal Shirts</a></li>
+																<li><a href="#">Bilazers</a></li>
+															</ul>
+														</li>
+														<li><span>Top Brands</span>
+															<ul>
+																<li><a href="#">T-Shirts</a></li>
+																<li><a href="#">Striped Shirts</a></li>
+																<li><a href="#">Half Shirts</a></li>
+																<li><a href="#">Formal Shirts</a></li>
+																<li><a href="#">Bilazers</a></li>
+															</ul>
+														</li>
+														<li><span>Jewelry</span>
+															<ul>
+																<li><a href="#">T-Shirts</a></li>
+																<li><a href="#">Striped Shirts</a></li>
+																<li><a href="#">Half Shirts</a></li>
+																<li><a href="#">Formal Shirts</a></li>
+																<li><a href="#">Bilazers</a></li>
+															</ul>
+														</li>
 													</ul>
 												</div>
 											</aside>
@@ -159,12 +186,12 @@
 										<div class="single-product">
 											<div class="product-img">
 												<span class="pro-label new-label">new</span>
-												<span class="pro-price-2"><span style="font-family: 'Arial', 'Helvetica', sans-serif;">&#8377;</span>{{ product.sale_price }}</span>
-												<a href="{% url 'shop:singleproduct' product.id %}"><img style="width:270px;height:270px;" src="{{ product.image.url }}" alt="" /></a>
+												<span class="pro-price-2">$ 56.20</span>
+												<a href="{% url 'shop:singleproduct' product.id %}"><img src="{{ product.image.url }}" alt="" /></a>
 											</div>
 											<div class="product-info clearfix text-center">
 												<div class="fix">
-													<h4 class="post-title"><a href="#">{{ product.title }}</a></h4>
+													<h4 class="post-title"><a href="#">dummy Product name</a></h4>
 												</div>
 												<div class="fix">
 													<span class="pro-rating">
@@ -176,10 +203,10 @@
 													</span>
 												</div>
 												<div class="product-action clearfix">
-													<a href="/order/wishlist/" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
-													<a href="{% url 'shop:singleproduct' product.id %}"  data-bs-target="tooltip" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
-													<a href="/" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
-													<a href="/order/shopcart/" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
+													<a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
+													<a href="#" data-bs-toggle="modal"  data-bs-target="#productModal" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
+													<a href="#" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
+													<a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
 												</div>
 											</div>
 										</div>
