--- a/user/templates/resetpassword.html
+++ b/user/templates/resetpassword.html
@@ -57,10 +57,10 @@
     <div class="card">
         <h2>Forgot Password?</h2>
         <p>You can reset your Password here</p>
-        <form action="{% url 'user:forgotpassword'%}" method='POST'>
+        <form action="{% url 'user:resetpassword'%}" method='POST'>
             {% csrf_token %}
-        <input type="text" name="name" class="passInput" placeholder="User Name">
-        <input type="text" name="email" class="passInput" placeholder="Email address">
+        <input type="password" name="password" class="pass" placeholder="Creat password">
+        <input type="password" name="confirm_password" class="resetpass"  placeholder="Confirm Password">
         <button type="submit">Send My Password</button>
         </form>
     </div>
