--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,9 +2,7 @@
 {% load static %}
 {% block header%}{%include 'header.html'%}{%endblock%}
 {% block body %}
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/@trevoreyre/autocomplete-js/dist/style.css"/>	
+<link rel="stylesheet" href="https://unpkg.com/@trevoreyre/autocomplete-js/dist/style.css"/>	
   		<div class="mobile-menu-area">
 				<div class="container-fluid">
 					<div class="row">
@@ -264,7 +262,7 @@
 										<span class="pro-label new-label">new</span>
 										<a href="{% url 'shop:singleproduct' product.id %}"><img style="width:270px;height:270px;"  src="{{product.image.url}}" alt="" /></a>
 										<div class="product-action clearfix">
-											<a href="/order/wishlist/" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
+											<a href="{% url 'order:addtowishlist' product.id %}" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
 											<a href="{% url 'shop:singleproduct' product.id %}"  data-bs-target="tooltip" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
 											<a href="/" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
 											<a href="/order/shopcart/" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
